--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "321#@!ewqDSA",
+    "database": "schoolines_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
