--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
+    "querystring": "^0.2.0",
     "request": "^2.74.0",
     "sequelize": "^3.24.2",
     "sequelize-cli": "^2.4.0",
