--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "321#@!ewqDSA",
+    "password": "larrynus3216",
     "database": "schoolines_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
